--- a/index.html
+++ b/index.html
@@ -110,7 +110,13 @@
                 <p><i class='bx bxs-phone'></i> +91-8088972078</p>
             </div>
             </section>
-            
-                        
+        <script>
+            document.addEventListener('contextmenu', function(event) {
+                event.preventDefault();
+            });
+            <div style="pointer-events: none;">
+                All mouse events disabled.
+                </div>
+        </script>
     </body>
 </html>
