--- a/index.html
+++ b/index.html
@@ -77,36 +77,45 @@
         </div>
     </section>
 
-    <!-- Portfolio Section -->
-    <section id="portfolio" class="portfolio">
-        <h2 class="heading"><span>Projects</span></h2>
-        <div class="portfolio-container">
-            <div class="portfolio-box">
-                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
-                <div class="portfolio-layer">
-                    <h4>Blood Bank Inventory Management System</h4>
-                    <p class="project-category">Web Development</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="image/project-2.jpg" alt="Networked QR Code Attendance System">
-                <div class="portfolio-layer">
-                    <h4>Networked QR Code Attendance System</h4>
-                    <p class="project-category">Django Development</p>
-                    <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
-                <img src="image/project-3.jpg" alt="QCalc">
-                <div class="portfolio-layer">
-                    <h4>QCalc</h4>
-                    <p class="project-category">Qt Development</p>
-                    <a href="https://github.com/SankethElalli/QtCalculator"><i class='bx bx-link-external'></i></a>
-                </div>
+<!-- Portfolio Section -->
+<section id="portfolio" class="portfolio">
+    <h2 class="heading"><span>Projects</span></h2>
+    <div class="portfolio-container">
+        <div class="portfolio-box">
+            <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+            <div class="portfolio-layer">
+                <h4>Blood Bank Inventory Management System</h4>
+                <p class="project-category">Web Development</p>
+                <a href="#"><i class='bx bx-link-external'></i></a>
             </div>
         </div>
-    </section>
+        <div class="portfolio-box">
+            <img src="image/project-2.jpg" alt="Networked QR Code Attendance System">
+            <div class="portfolio-layer">
+                <h4>Networked QR Code Attendance System</h4>
+                <p class="project-category">Django Development</p>
+                <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="image/project-3.jpg" alt="QCalc">
+            <div class="portfolio-layer">
+                <h4>QCalc</h4>
+                <p class="project-category">Qt Development</p>
+                <a href="https://github.com/SankethElalli/QtCalculator"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+        <div class="portfolio-box">
+            <img src="image/project-4.jpg" alt="Gen AI model">
+            <div class="portfolio-layer">
+                <h4>Gen AI model</h4>
+                <p class="project-category">AI/ML</p>
+                <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
