--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header -->
-    <div class="header">
+    <header class="header">
         <div class="logo">Portfolio</div>
         <div id="menu-icon" class="menu-icon">&#9776;</div> <!-- Hamburger icon -->
         <nav class="navbar">
@@ -19,7 +19,6 @@
             <a href="#portfolio">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
-    </div>
     </header>
 
     <!-- Home Section -->
@@ -32,7 +31,7 @@
                 <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/drive/u/0/folders/1mjZpVA8XgIqGnzeuxJo5lUDAwF4MGd83" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1dyvIDSCO6kaBz4ZIdm2irFYzDF6NmuiN/view?usp=sharing" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
@@ -77,45 +76,44 @@
         </div>
     </section>
 
-<!-- Portfolio Section -->
-<section id="portfolio" class="portfolio">
-    <h2 class="heading"><span>Projects</span></h2>
-    <div class="portfolio-box">
-        <img src="image/project-2.jpg" alt="Networked QR Code Attendance System">
-        <div class="portfolio-layer">
-            <h4>Networked QR Code Attendance System</h4>
-            <p class="project-category">Django Development</p>
-            <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0"><i class='bx bx-link-external'></i></a>
-        </div>
-    </div>
-    <div class="portfolio-box">
-        <img src="image/project-3.jpg" alt="QCalc">
-        <div class="portfolio-layer">
-            <h4>QCalc</h4>
-            <p class="project-category">Qt Development</p>
-            <a href="https://github.com/SankethElalli/QtCalculator"><i class='bx bx-link-external'></i></a>
-        </div>
-    </div>
-    <div class="portfolio-container">
-        <div class="portfolio-box">
-            <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
-            <div class="portfolio-layer">
-                <h4>Blood Bank Inventory Management System</h4>
-                <p class="project-category">Web Development</p>
-                <a href="#"><i class='bx bx-link-external'></i></a>
+    <!-- Portfolio Section -->
+    <section id="portfolio" class="portfolio">
+        <h2 class="heading"><span>Projects</span></h2>
+        <div class="portfolio-container">
+            <div class="portfolio-box">
+                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+                <div class="portfolio-layer">
+                    <h4>Blood Bank Inventory Management System</h4>
+                    <p class="project-category">Web Development</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="image/project-2.jpg" alt="Networked QR Code Attendance System">
+                <div class="portfolio-layer">
+                    <h4>Networked QR Code Attendance System</h4>
+                    <p class="project-category">Django Development</p>
+                    <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="image/project-3.jpg" alt="QCalc">
+                <div class="portfolio-layer">
+                    <h4>QCalc</h4>
+                    <p class="project-category">Qt Development</p>
+                    <a href="https://github.com/SankethElalli/QtCalculator"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="image/project-4.jpg" alt="Gen AI model">
+                <div class="portfolio-layer">
+                    <h4>Gen AI model</h4>
+                    <p class="project-category">AI/ML</p>
+                    <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
+                </div>
             </div>
         </div>
-        <div class="portfolio-box">
-            <img src="image/project-4.jpg" alt="Gen AI model">
-            <div class="portfolio-layer">
-                <h4>Gen AI model</h4>
-                <p class="project-category">AI/ML</p>
-                <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
-            </div>
-        </div>
-    </div>
-</section>
-
+    </section>
 
     <!-- Contact Section -->
     <section id="contact" class="contact">
