--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1a-8elcAF1qWzHFdw1LY7F2bDwS2Ej-XF/view?usp=sharing" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/1a-8elcAF1qWzHFdw1LY7F2bDwS2Ej-XF/view" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
