--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+
+    <script>
+        fetch('https://https://portfolio-na1f.onrender.com/track', { method: 'GET' })
+            .then(response => console.log("Visitor tracked"))
+            .catch(error => console.error("Error tracking visitor:", error));
+    </script>
+
     <!-- Header -->
     <header class="header">
         <div class="logo">Portfolio</div>
@@ -32,7 +39,7 @@
                 <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1dyvIDSCO6kaBz4ZIdm2irFYzDF6NmuiN/view?usp=sharing" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/12SG-PZeYGbWmoaZYGr4rqzhYIDDXSqaq/view?usp=sharing" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
@@ -44,14 +51,15 @@
         <div class="about-content">
             <h2 class="heading">About<span> Me,</span></h2>
             <p>
-                I'm a passionate Full-Stack Developer and Python enthusiast from India, specializing in creating dynamic and user-friendly web applications. I enjoy transforming ideas into innovative solutions through clean, efficient code.
+                I am a dedicated Full-Stack Developer and Python enthusiast from India with a passion for crafting dynamic and intuitive web applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
             </p>
             <p>
-                My experience spans across web development, including HTML, CSS, JavaScript, and Django, with a focus on creating seamless user experiences. I have worked on projects such as a Networked QR Attendance System and a Blood Bank Inventory Management System, which showcase my ability to solve real-world problems with technology.
+                With a strong foundation in Technologies such as Python, Django, ReactJS, Qt framework I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
             </p>
             <p>
-                I aim to build web applications that are not only functional but also visually appealing. Whether it's a responsive design or a robust backend, I ensure that the end product communicates the client's vision and goals in the most effective way.
+                My goal is to develop software and applications that excel in both functionality and aesthetics. From designing responsive interfaces to building scalable backends, I strive to ensure that every project reflects the client's vision and achieves their objectives effectively.
             </p>
+            
         </div>
     </section>
 
@@ -82,11 +90,11 @@
         <h2 class="heading"><span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+                <img src="image/writerboard.jpg" alt="Blood Bank Inventory Management System">
                 <div class="portfolio-layer">
-                    <h4>Blood Bank Inventory Management System</h4>
-                    <p class="project-category">Web Development</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <h4>WriterBoard</h4>
+                    <p class="project-category">Qt Software Development</p>
+                    <a href="https://www.writerboard.app/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -113,6 +121,13 @@
                     <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
+            <div class="portfolio-box">
+                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+                <div class="portfolio-layer">
+                    <h4>Blood Bank Inventory Management System</h4>
+                    <p class="project-category">Web Development</p>
+                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp"><i class='bx bx-link-external'></i></a>
+                </div>
         </div>
     </section>
 
