--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
         <h2 class="heading">What<span> I'm Doing?</span></h2>
         <div class="services-container">
             <div class="services-box">
-                <img src="image/webdesign.svg" alt="Web Design" width="40">
-                <h3>Web Design</h3>
-                <p>The most modern and high-quality design made at a professional level.</p>
+                <img src="image/softdev.svg" alt="Web Design" width="40">
+                <h3>Software Development</h3>
+                <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
             </div>
             <div class="services-box">
                 <img src="image/webdevelopment.svg" alt="Web Development" width="40">
