--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="services-box">
                 <img src="image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
-                <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
+                <p>creating modern and reliable software solutions with focus on quality and user experience.</p>
             </div>
             <div class="services-box">
                 <img src="image/webdevelopment.svg" alt="Web Development" width="40">
