--- a/index.html
+++ b/index.html
@@ -9,18 +9,10 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
-
-    <script>
-        fetch('https://https://portfolio-na1f.onrender.com/track', { method: 'GET' })
-            .then(response => console.log("Visitor tracked"))
-            .catch(error => console.error("Error tracking visitor:", error));
-    </script>
-
+<body onload="location.href='#home'">
     <!-- Header -->
     <header class="header">
-        <div class="logo">Portfolio</div>
-        <div id="menu-icon" class="menu-icon">&#9776;</div> <!-- Hamburger icon -->
+        <a href="#home" class="logo">PORTFOLIO</a>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
@@ -39,15 +31,16 @@
                 <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/12SG-PZeYGbWmoaZYGr4rqzhYIDDXSqaq/view?usp=sharing" class="btn">Download CV</a>
+            <a href="https://drive.google.com/file/d/12SG-PZeYGbWmoaZYGr4rqzhYIDDXSqaq/view?usp=sharing" class="btn">Experiences</a>
         </div>
-        <div class="home-img">
-            <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
-        </div>
+        <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a> <!-- Updated line -->
     </section>
 
     <!-- About Section -->
     <section class="about" id="about">
+        <div class="home-img">
+            <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
+        </div>
         <div class="about-content">
             <h2 class="heading">About<span> Me,</span></h2>
             <p>
@@ -70,7 +63,7 @@
             <div class="services-box">
                 <img src="image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
-                <p>Software solutions with focus on quality and user experience.</p>
+                <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
             </div>
             <div class="services-box">
                 <img src="image/webdevelopment.svg" alt="Web Development" width="40">
@@ -135,8 +128,8 @@
     <section id="contact" class="contact">
         <h2 class="heading">Say<span> Hi,</span></h2>
         <div class="contact-info">
-            <p><i class='bx bxs-envelope'></i> elallisanketh7@gmail.com</p>
-            <p><i class='bx bxs-phone'></i> +91-8088972078</p>
+            <p><i class='bx bxs-envelope'></i><a href="mailto:elallisanketh7@gmail.com"> elallisanketh7@gmail.com</a></p>
+            <p><i class='bx bxs-phone'></i><a href="tel:+918088972078"> +91-8088972078</a></p>
         </div>
     </section>
 
