--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanketh Elalli</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <meta name="description" content="Sanketh Elalli - Stack & Software Developer Portfolio">
+    <meta name="keywords" content="web development, software development, python, databases">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
@@ -13,6 +16,11 @@
     <!-- Header -->
     <header class="header">
         <a href="#home" class="logo">PORTFOLIO</a>
+        <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </div>
         <nav class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
@@ -26,14 +34,14 @@
         <div class="home-content">
             <h3>Hi, I'm</h3>
             <h1>Sanketh Elalli</h1>
-            <h3>Full Stack Developer | Python Enthusiast <span class="multiple-text"></span></h3>
+            <h3>Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/12SG-PZeYGbWmoaZYGr4rqzhYIDDXSqaq/view?usp=sharing" class="btn">Experiences</a>
+            <a href="https://drive.google.com/file/d/1_Gs0TyBunJxJglOV532cdF1CJqCq78WO/view?usp=sharing" class="btn">Experiences</a>
         </div>
-        <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a> <!-- Updated line -->
+        <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a>
     </section>
 
     <!-- About Section -->
@@ -44,10 +52,10 @@
         <div class="about-content">
             <h2 class="heading">About<span> Me,</span></h2>
             <p>
-                I am a dedicated Full-Stack Developer and Python enthusiast from India with a passion for crafting dynamic and intuitive web applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
+                I am a Stack & Software Developer, an enthusiast in Web, Python and Databases with a passion for crafting dynamic and intuitive applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
             </p>
             <p>
-                With a strong foundation in Technologies such as Python, Django, ReactJS, Qt framework I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
+                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. <>I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
             </p>
             <p>
                 My goal is to develop software and applications that excel in both functionality and aesthetics. From designing responsive interfaces to building scalable backends, I strive to ensure that every project reflects the client's vision and achieves their objectives effectively.
@@ -83,7 +91,15 @@
         <h2 class="heading"><span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="image/writerboard.jpg" alt="Blood Bank Inventory Management System">
+                <img src="image/project-5.jpg" alt="Online Pharmacy Store">
+                <div class="portfolio-layer">
+                    <h4>Pillora</h4>
+                    <p class="project-category">MERN Stack Online Pharmacy Store</p>
+                    <a href="https://pillora.vercel.app"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                 <img src="image/writerboard.jpg" alt="WriterBoard">
                 <div class="portfolio-layer">
                     <h4>WriterBoard</h4>
                     <p class="project-category">Qt Software Development</p>
@@ -107,6 +123,14 @@
                 </div>
             </div>
             <div class="portfolio-box">
+                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+                <div class="portfolio-layer">
+                    <h4>Blood Bank Inventory Management System</h4>
+                    <p class="project-category">Web Development</p>
+                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
                 <img src="image/project-4.jpg" alt="Gen AI model">
                 <div class="portfolio-layer">
                     <h4>Gen AI model</h4>
@@ -114,13 +138,6 @@
                     <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
-            <div class="portfolio-box">
-                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
-                <div class="portfolio-layer">
-                    <h4>Blood Bank Inventory Management System</h4>
-                    <p class="project-category">Web Development</p>
-                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp"><i class='bx bx-link-external'></i></a>
-                </div>
         </div>
     </section>
 
@@ -133,5 +150,7 @@
         </div>
     </section>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
