--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="location.href='#home'">
     <!-- Header -->
     <header class="header">
-        <a href="#home" class="logo">Sanketh.</a>
+        <a href="#home" class="logo">SANKETH.</a>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
