--- a/index.html
+++ b/index.html
@@ -91,19 +91,19 @@
         <h2 class="heading"><span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="image/project-6.jpg" alt="Online Pharmacy Store">
-                <div class="portfolio-layer">
-                    <h4>AgriHub</h4>
-                    <p class="project-category">LLM Assisted Portal for Sustainable Agriculture</p>
-                    <a href="https://github.com/SankethElalli/AgriHub"><i class='bx bx-link-external'></i></a>
-                </div>
-            </div>
-            <div class="portfolio-box">
                 <img src="image/project-5.jpg" alt="Online Pharmacy Store">
                 <div class="portfolio-layer">
                     <h4>Pillora</h4>
                     <p class="project-category">MERN Stack Online Pharmacy Store</p>
                     <a href="https://pillora.vercel.app"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="image/project-6.jpg" alt="Agriculture Portal">
+                <div class="portfolio-layer">
+                    <h4>AgriHub</h4>
+                    <p class="project-category">LLM Assisted Portal for Sustainable Agriculture</p>
+                    <a href="https://github.com/SankethElalli/AgriHub"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
