--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <body onload="location.href='#home'">
     <!-- Header -->
     <header class="header">
-        <a href="#home" class="logo">SANKETH.</a>
+        <a href="#home" class="logo">
+            <span class="logo-initial">S</span><span class="logo-full">ANKETH.</span>
+        </a>
         <div class="hamburger">
             <span class="bar"></span>
             <span class="bar"></span>
@@ -81,7 +83,7 @@
             <div class="services-box">
                 <img src="image/ai.svg" alt="Generative AI" width="40">
                 <h3>Generative AI</h3>
-                <p>With hands-on experience in AI frameworks, I specialize in Gen AI model training and fine-tuning.</p>
+                <p>With experience in AI frameworks, I specialize in Gen AI model training and fine-tuning.</p>
             </div>
         </div>
     </section>
