--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <h1>Sanketh Elalli</h1>
             <h3>Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
             <div class="social-media">
-                <a href="https://www.linkedin.com/in/snketh"><i class='bx bxl-linkedin-square'></i></a>
-                <a href="https://github.com/SankethElalli"><i class='bx bxl-github'></i></a>
+                <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
+                <a href="https://github.com/SankethElalli" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1_Gs0TyBunJxJglOV532cdF1CJqCq78WO/view?usp=sharing" class="btn">Experiences</a>
+            <a href="https://drive.google.com/file/d/1_Gs0TyBunJxJglOV532cdF1CJqCq78WO/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
         </div>
         <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a>
     </section>
@@ -97,7 +97,7 @@
                 <div class="portfolio-layer">
                     <h4>Pillora</h4>
                     <p class="project-category">MERN Stack Online Pharmacy Store</p>
-                    <a href="https://pillora.vercel.app"><i class='bx bx-link-external'></i></a>
+                    <a href="https://pillora.vercel.app" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -105,15 +105,23 @@
                 <div class="portfolio-layer">
                     <h4>AgriHub</h4>
                     <p class="project-category">LLM Assisted Portal for Sustainable Agriculture</p>
-                    <a href="https://github.com/SankethElalli/AgriHub"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/SankethElalli/AgriHub" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
-                 <img src="image/writerboard.jpg" alt="WriterBoard">
+                <img src="image/writerboard.jpg" alt="WriterBoard">
                 <div class="portfolio-layer">
                     <h4>WriterBoard</h4>
                     <p class="project-category">Qt Software Development</p>
-                    <a href="https://www.writerboard.app/"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.writerboard.app/" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            <div class="portfolio-box">
+                <img src="image/project-7.jpg" alt="E-commerce Platform">
+                <div class="portfolio-layer">
+                    <h4>WesternStreet</h4>
+                    <p class="project-category">MERN Stack Online Sneaker Store</p>
+                    <a href="https://github.com/SankethElalli/MERN-StackEcommercePlatform" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -121,7 +129,7 @@
                 <div class="portfolio-layer">
                     <h4>Networked QR Code Attendance System</h4>
                     <p class="project-category">Django Development</p>
-                    <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0"><i class='bx bx-link-external'></i></a>
+                    <a href="https://www.youtube.com/watch?v=PK6cQ8npwF0" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -129,7 +137,7 @@
                 <div class="portfolio-layer">
                     <h4>QCalc</h4>
                     <p class="project-category">Qt Development</p>
-                    <a href="https://github.com/SankethElalli/QtCalculator"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/SankethElalli/QtCalculator" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -137,7 +145,7 @@
                 <div class="portfolio-layer">
                     <h4>Blood Bank Inventory Management System</h4>
                     <p class="project-category">Web Development</p>
-                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp"><i class='bx bx-link-external'></i></a>
+                    <a href="https://github.com/SankethElalli/BloodBankMangement-pHp" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
@@ -145,7 +153,7 @@
                 <div class="portfolio-layer">
                     <h4>Gen AI model</h4>
                     <p class="project-category">AI/ML</p>
-                    <a href="https://huggingface.co/snketh/Model-xzg"><i class='bx bx-link-external'></i></a>
+                    <a href="https://huggingface.co/snketh/Model-xzg" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
         </div>
