--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sanketh Elalli</title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.png">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="description" content="Sanketh Elalli - Stack & Software Developer Portfolio">
@@ -49,7 +50,7 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="home-img">
-            <img src="image/my-avatar.jpg" alt="Sanketh Elalli">
+            <img src="assets/image/my-avatar.jpg" alt="Sanketh Elalli">
         </div>
         <div class="about-content">
             <h2 class="heading">About<span> Me,</span></h2>
@@ -71,17 +72,17 @@
         <h2 class="heading">What<span> I'm Doing?</span></h2>
         <div class="services-container">
             <div class="services-box">
-                <img src="image/softdev.svg" alt="Web Design" width="40">
+                <img src="assets/image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
                 <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
             </div>
             <div class="services-box">
-                <img src="image/webdevelopment.svg" alt="Web Development" width="40">
+                <img src="assets/image/webdevelopment.svg" alt="Web Development" width="40">
                 <h3>Web Development</h3>
                 <p>High-quality development of sites at the professional level.</p>
             </div>
             <div class="services-box">
-                <img src="image/ai.svg" alt="Generative AI" width="40">
+                <img src="assets/image/ai.svg" alt="Generative AI" width="40">
                 <h3>Generative AI</h3>
                 <p>With experience in AI frameworks, I specialize in Gen AI model training and fine-tuning.</p>
             </div>
@@ -93,7 +94,7 @@
         <h2 class="heading"><span>Projects</span></h2>
         <div class="portfolio-container">
             <div class="portfolio-box">
-                <img src="image/project-5.jpg" alt="Online Pharmacy Store">
+                <img src="assets/image/project-5.jpg" alt="Online Pharmacy Store">
                 <div class="portfolio-layer">
                     <h4>Pillora</h4>
                     <p class="project-category">MERN Stack Online Pharmacy Store</p>
@@ -101,7 +102,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-6.jpg" alt="Agriculture Portal">
+                <img src="assets/image/project-6.jpg" alt="Agriculture Portal">
                 <div class="portfolio-layer">
                     <h4>AgriHub</h4>
                     <p class="project-category">LLM Assisted Portal for Sustainable Agriculture</p>
@@ -109,7 +110,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/writerboard.jpg" alt="WriterBoard">
+                <img src="assets/image/writerboard.jpg" alt="WriterBoard">
                 <div class="portfolio-layer">
                     <h4>WriterBoard</h4>
                     <p class="project-category">Qt Software Development</p>
@@ -117,7 +118,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-7.jpg" alt="E-commerce Platform">
+                <img src="assets/image/project-7.jpg" alt="E-commerce Platform">
                 <div class="portfolio-layer">
                     <h4>WesternStreet</h4>
                     <p class="project-category">MERN Stack Online Sneaker Store</p>
@@ -125,7 +126,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-2.jpg" alt="Networked QR Code Attendance System">
+                <img src="assets/image/project-2.jpg" alt="Networked QR Code Attendance System">
                 <div class="portfolio-layer">
                     <h4>Networked QR Code Attendance System</h4>
                     <p class="project-category">Django Development</p>
@@ -133,7 +134,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-3.jpg" alt="QCalc">
+                <img src="assets/image/project-3.jpg" alt="QCalc">
                 <div class="portfolio-layer">
                     <h4>QCalc</h4>
                     <p class="project-category">Qt Development</p>
@@ -141,7 +142,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-1.jpg" alt="Blood Bank Inventory Management System">
+                <img src="assets/image/project-1.jpg" alt="Blood Bank Inventory Management System">
                 <div class="portfolio-layer">
                     <h4>Blood Bank Inventory Management System</h4>
                     <p class="project-category">Web Development</p>
@@ -149,7 +150,7 @@
                 </div>
             </div>
             <div class="portfolio-box">
-                <img src="image/project-4.jpg" alt="Gen AI model">
+                <img src="assets/image/project-4.jpg" alt="Gen AI model">
                 <div class="portfolio-layer">
                     <h4>Gen AI model</h4>
                     <p class="project-category">AI/ML</p>
