--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 I am a Stack & Software Developer, an enthusiast in Web, Python and Databases with a passion for crafting dynamic and intuitive applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
             </p>
             <p>
-                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. <>I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
+                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
             </p>
             <p>
                 My goal is to develop software and applications that excel in both functionality and aesthetics. From designing responsive interfaces to building scalable backends, I strive to ensure that every project reflects the client's vision and achieves their objectives effectively.
