--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body onload="location.href='#home'">
-    <!-- Header -->
-    <header class="header">
+    <!-- Navbar -->
+    <nav class="navbar-container">
         <a href="#home" class="logo">
             <span class="logo-initial">S</span><span class="logo-full">ANKETH.</span>
         </a>
@@ -24,13 +24,13 @@
             <span class="bar"></span>
             <span class="bar"></span>
         </div>
-        <nav class="navbar">
+        <div class="navbar">
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#portfolio">Projects</a>
             <a href="#contact">Contact</a>
-        </nav>
-    </header>
+        </div>
+    </nav>
 
     <!-- Home Section -->
     <section class="home" id="home">
@@ -58,7 +58,7 @@
                 I am a Stack & Software Developer, an enthusiast in Web, Python and Databases with a passion for crafting dynamic and intuitive applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
             </p>
             <p>
-                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
+                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. <>I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
             </p>
             <p>
                 My goal is to develop software and applications that excel in both functionality and aesthetics. From designing responsive interfaces to building scalable backends, I strive to ensure that every project reflects the client's vision and achieves their objectives effectively.
