--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <img src="assets/image/project-6.jpg" alt="Agriculture Portal">
                 <div class="portfolio-layer">
                     <h4>AgriHub</h4>
-                    <p class="project-category">LLM Assisted Portal for Sustainable Agriculture</p>
+                    <p class="project-category">LLM Assisted Portal for Sustainable Agriculture (PHP Development)</p>
                     <a href="https://github.com/SankethElalli/AgriHub" target="_blank" rel="noopener noreferrer"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
