--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
             </div>
-            <a href="https://drive.google.com/file/d/1_Gs0TyBunJxJglOV532cdF1CJqCq78WO/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
+            <a href="https://drive.google.com/file/d/1uE0hcZ7xWpXII0v0V7whXM3hTFFXCOnb/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
         </div>
         <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a>
     </section>
