--- a/index.html
+++ b/index.html
@@ -75,16 +75,19 @@
                 <img src="assets/image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
                 <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
+                <div class="particles"></div>
             </div>
             <div class="services-box">
                 <img src="assets/image/webdevelopment.svg" alt="Web Development" width="40">
                 <h3>Web Development</h3>
                 <p>High-quality development of sites at the professional level.</p>
+                <div class="particles"></div>
             </div>
             <div class="services-box">
                 <img src="assets/image/ai.svg" alt="Generative AI" width="40">
                 <h3>Generative AI</h3>
                 <p>With experience in AI frameworks, I specialize in Gen AI model training and fine-tuning.</p>
+                <div class="particles"></div>
             </div>
         </div>
     </section>
