--- a/index.html
+++ b/index.html
@@ -14,6 +14,21 @@
 </head>
 
 <body onload="location.href='#home'">
+    <!-- Loading Screen -->
+    <div id="loader-overlay">
+                <!-- Matrix Loader -->
+                <div class="ai-matrix-loader">
+                    <div class="digit">0</div>
+                    <div class="digit">1</div>
+                    <div class="digit">0</div>
+                    <div class="digit">1</div>
+                    <div class="digit">1</div>
+                    <div class="digit">0</div>
+                    <div class="digit">0</div>
+                    <div class="digit">1</div>
+                    <div class="glow"></div>
+                </div>
+    </div>
     <!-- Navbar -->
     <nav class="navbar-container">
         <a href="#home" class="logo">
@@ -34,17 +49,22 @@
 
     <!-- Home Section -->
     <section class="home" id="home">
-        <div class="home-content">
+        <video class="home-bg-video" autoplay loop muted playsinline preload="auto" disablepictureinpicture>
+            <source src="assets/assets.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    <div class="home-bg-blur"></div>
+        <div class="home-content" style="position:relative;z-index:1;">
             <h3>Hi, I'm</h3>
             <h1>Sanketh Elalli</h1>
-            <h3>Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
+            <h3>Flowgrammer | Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
             </div>
             <a href="https://drive.google.com/file/d/1uE0hcZ7xWpXII0v0V7whXM3hTFFXCOnb/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
         </div>
-        <a href="#about" class="down-arrow"><i class='bx bx-chevron-down'></i></a>
+        <a href="#about" class="down-arrow" style="position:relative;z-index:1;"><i class='bx bx-chevron-down'></i></a>
     </section>
 
     <!-- About Section -->
@@ -55,13 +75,13 @@
         <div class="about-content">
             <h2 class="heading">About<span> Me,</span></h2>
             <p>
-                I am a Stack & Software Developer, an enthusiast in Web, Python and Databases with a passion for crafting dynamic and intuitive applications. By blending technical expertise with a focus on user-centric design, I turn innovative ideas into impactful digital solutions.
+                I'm a <b>Stack & Software</b> Developer with expertise in <b>Python</b>, <b>NodeJS</b>, and <b>Databases</b>. I'm passionate about building scalable and intuitive applications.
             </p>
             <p>
-                With a strong foundation in Technologies such as Python, Django, NodeJS, Qt framework. <>I specialize in delivering seamless user experiences. My portfolio includes projects highlighting my ability to address real-world challenges through technology.
+                I also specialize in AI-driven automation with <b>n8n</b>, creating workflows that connect API's, Databases, and AI agents into seamless, intelligent systems.
             </p>
             <p>
-                My goal is to develop software and applications that excel in both functionality and aesthetics. From designing responsive interfaces to building scalable backends, I strive to ensure that every project reflects the client's vision and achieves their objectives effectively.
+                My focus: Delivering solutions that combine functionality, design, and automation - turning ideas into impactful digital products.
             </p>
             
         </div>
@@ -72,21 +92,21 @@
         <h2 class="heading">What<span> I'm Doing?</span></h2>
         <div class="services-container">
             <div class="services-box">
+                <img src="assets/image/ai.svg" alt="AI Automation" width="40">
+                <h3>AI Automation</h3>
+                <p>I build automation systems - integrating AI agents, Databases, and API's.</p>
+                <div class="particles"></div>
+            </div>
+            <div class="services-box">
+                <img src="assets/image/webdev.svg" alt="Web Development" width="40">
+                <h3>Web Development</h3>
+                <p>I do High-quality development of sites at the professional level.</p>
+                <div class="particles"></div>
+            </div>
+            <div class="services-box">
                 <img src="assets/image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
                 <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
-                <div class="particles"></div>
-            </div>
-            <div class="services-box">
-                <img src="assets/image/webdevelopment.svg" alt="Web Development" width="40">
-                <h3>Web Development</h3>
-                <p>High-quality development of sites at the professional level.</p>
-                <div class="particles"></div>
-            </div>
-            <div class="services-box">
-                <img src="assets/image/ai.svg" alt="Generative AI" width="40">
-                <h3>Generative AI</h3>
-                <p>With experience in AI frameworks, I specialize in Gen AI model training and fine-tuning.</p>
                 <div class="particles"></div>
             </div>
         </div>
