Replace video background with GIF and enhance UI
Swapped the home section's video background for a GIF for improved compatibility and performance. Updated related HTML and CSS for the new background, added button and LinkedIn icon hover effects, and made the down-arrow fixed and dynamically visible based on scroll position via JavaScript.

--- a/index.html
+++ b/index.html
@@ -49,14 +49,11 @@
 
     <!-- Home Section -->
     <section class="home" id="home">
-        <video class="home-bg-video" autoplay loop muted playsinline preload="auto" disablepictureinpicture>
-            <source src="assets/assets.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
-    <div class="home-bg-blur"></div>
+        <img class="home-bg-gif" src="assets/assets.gif" alt="Background animation" loading="eager" />
+        <div class="home-bg-blur"></div>
         <div class="home-content" style="position:relative;z-index:1;">
-            <h3>Hi, I'm</h3>
-            <h1>Sanketh Elalli</h1>
+            <h3 style="margin-bottom: 0.5em;">Hi, I'm</h3>
+            <h1 style="margin-bottom: 0.5em;">Sanketh Elalli</h1>
             <h3>Flowgrammer | Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
@@ -64,7 +61,7 @@
             </div>
             <a href="https://drive.google.com/file/d/1uE0hcZ7xWpXII0v0V7whXM3hTFFXCOnb/view?usp=drive_link" target="_blank" rel="noopener noreferrer" class="btn">Experiences</a>
         </div>
-        <a href="#about" class="down-arrow" style="position:relative;z-index:1;"><i class='bx bx-chevron-down'></i></a>
+    <a href="#about" class="down-arrow"><i class="bx bx-chevron-down"></i></a>
     </section>
 
     <!-- About Section -->
