Refactor text content and styles for improved readability and consistency

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="home-content" style="position:relative;z-index:1;">
             <h3 style="margin-bottom: 0.5em;">Hi, I'm</h3>
             <h1 style="margin-bottom: 0.5em;">Sanketh Elalli</h1>
-            <h3>Flowgrammer | Stack & Software Developer | Web, Python & Databases <span class="multiple-text"></span></h3>
+            <h3>Flowgrammer | Stack & Software Developer<span class="multiple-text"></span></h3>
             <div class="social-media">
                 <a href="https://www.linkedin.com/in/snketh" target="_blank" rel="noopener noreferrer"><i class='bx bxl-linkedin-square'></i></a>
                 <a href="https://github.com/SankethElalli" target="_blank" rel="noopener noreferrer"><i class='bx bxl-github'></i></a>
@@ -70,7 +70,7 @@
             <img src="assets/image/my-avatar.jpg" alt="Sanketh Elalli">
         </div>
         <div class="about-content">
-            <h2 class="heading">About<span> Me,</span></h2>
+            <h2 class="about-heading">About<span> Me,</span></h2>
             <p>
                 I'm a <b>Stack & Software</b> Developer with expertise in <b>Python</b>, <b>NodeJS</b>, and <b>Databases</b>. I'm passionate about building scalable and intuitive applications.
             </p>
@@ -103,7 +103,7 @@
             <div class="services-box">
                 <img src="assets/image/softdev.svg" alt="Web Design" width="40">
                 <h3>Software Development</h3>
-                <p>I create modern and reliable software solutions with a focus on quality and user experience.</p>
+                <p>I build modern, reliable software with a focus on quality and user experience.</p>
                 <div class="particles"></div>
             </div>
         </div>
